# mud-controller-enforcer

./: .common.yml  .editorconfig  .env  .gitignore  .gitlab-ci.yml  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  build.rs  docker-compose.yml  run_dhcp_client.sh  run_dnsmasq.sh  run_local.sh  rustfmt.toml  test_dnsmasq_hook.sh
.gitlab/issue_templates/: Misc.md
.gitsecret/keys/: pubring.kbx  trustdb.gpg
.gitsecret/paths/: mapping.cfg
certs/: ca.cnf  client.cnf  gen_ca.sh  gen_client_cert.sh  gen_httpchallenge_cert.sh  gen_server_cert.sh  httpchallenge.cnf  namib-ca-key.pem.secret  namib-ca.pem  server.cnf
config/: firewall
debian/: changelog  conffiles  config  control  copyright  namib-mud-controller-postgres.install  namib-mud-controller-postgres.service  namib-mud-controller.install  namib-mud-controller.service  namib-mud-controller.sysusers  postinst  rules  sqlx-data.postgres.json  sqlx-data.sqlite.json
docker/: Dockerfile  docker-compose.yml  run_mud_controller.sh
migrations/postgres/: 20201102024531_create_users.sql  20201103010530_create_roles.sql  20201126060825_create_devices.sql  20210115134426_default_roles.sql  20210124172420_create_user_config.sql  20210205045228_mud_overrides.sql  20210205150408_add_collect_info_to_devices.sql  20210212014807_change_user_config.sql  20210307135322_create_rooms.sql  20210307162456_add_devices_column.sql  20210307162456_add_devices_room_id.sql  20210307164139_add_foreign_key.sql  20210319004624_add_devices_clipart.sql  20210322205951_recreate_devices_table.sql  20210408232835_add_last_interaction_to_user.sql  20210423164516_add_enforcer_table.sql
migrations/sqlite/: 20201103155837_create_users.sql  20201103170530_create_roles.sql  20201126060825_create_devices.sql  20210124172420_create_user_config.sql  20210212014807_recreate_user_config.sql  20210307135322_create_rooms.sql  20210307162456_add_devices_room_id.sql  20210319004624_add_devices_clipart.sql  20210322205951_change_devices_to_mac.sql.sql  20210322205951_recreate_devices_table.sql  20210402163349_recreate_rooms.sql  20210408232835_add_last_interaction_to_user.sql
namib_controller/: .env  .gitlab-ci.yml  Cargo.toml  README.md  THIRD-PARTY
namib_controller/debian/: namib-mud-controller-postgres.install  namib-mud-controller-postgres.service  namib-mud-controller.install  namib-mud-controller.service  rules
namib_controller/docker/: Dockerfile  QuoVadis_Global_SSL_ICA_G3.crt  run_mud_controller.sh
namib_controller/neo4things-api/: generate-rust-code.sh  openapi-schema.yml
namib_controller/scripts/: download_namib_frontend.sh  import_mock_data.sh  recreate_db.sh  update_sqlx_data.sh
namib_controller/src/: app.rs  app_config.rs  auth.rs  error.rs  main.rs  rpc_server.rs  util.rs
namib_controller/tests/: config_tests.rs  device_config_service_tests.rs  flow_scope_service_test.rs  lib.rs  mud_profile_service_tests.rs  role_service_tests.rs  user_api_test.rs  user_service_tests.rs
namib_enforcer/: .gitignore  .gitlab-ci.yml  Cargo.toml  THIRD-PARTY  test_dnsmasq_hook.sh
namib_enforcer/openwrt/image/: .gitlab-ci.yml  50_load_iptables  Dockerfile  inittab
namib_enforcer/openwrt/image/files/etc/uci-defaults/: xxx_config
namib_enforcer/openwrt/package/: .gitlab-ci.yml  Makefile  config.diff
namib_enforcer/openwrt/package/dnsmasq_patches_21.02/: 1001-Add_MUD_IPv4.patch  1002-Add_MUD_IPv6.patch
namib_enforcer/openwrt/package/dnsmasq_patches_22.03/: 1001-Add_MUD_IPv4.patch  1002-Add_MUD_IPv6.patch
namib_enforcer/openwrt/package/files/: 60-dnsmasq-enable-query-logs.sh
namib_enforcer/src/: error.rs  main.rs  uci.rs
namib_enforcer/src/dhcp/: dhcp_event_listener.rs  dnsmasq_hook.rs  mod.rs
namib_enforcer/src/rpc/: controller_discovery.rs  rpc_client.rs
namib_enforcer/src/services/: dns.rs  firewall_service.rs  log_watcher.rs  mod.rs  nflog_watcher.rs
namib_enforcer/tests/: test_dnsmasq_hook.rs
namib_enforcer/tests/config/test_delete_all_config/: firewall_before
namib_enforcer/tests/config/test_trivial_apply_config/: expected_firewall
namib_shared/: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE-APACHE  README.md
namib_shared/src/: firewall_config.rs  flow_scope.rs  lib.rs  models.rs  rpc.rs
neo4jthings-api/: .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  generate-rust-code.sh  openapi-schema.yml
neo4jthings-api/src/: lib.rs
neo4jthings-api/src/apis/: configuration.rs  mod.rs  mud_api.rs  thing_api.rs
neo4jthings-api/src/models/: acl.rs  mod.rs  mud.rs  mud_by_manufacturer.rs  paginated_mud_by_manufacturer_list.rs  paginated_mud_list.rs  paginated_service_list.rs  paginated_thing_list.rs  thing.rs  upload_mud.rs
neo4things-api/: .gitignore  .openapi-generator-ignore  Cargo.toml  README.md  docker-compose.yml  generate-rust-code.sh  openapi-schema.yml
openwrt/: Makefile  config.diff
openwrt/files/: 60-dnsmasq-enable-query-logs.sh  namib.hook  namib.init
openwrt/image/: .gitlab-ci.yml  Dockerfile
openwrt/package/: .gitlab-ci.yml  Makefile
openwrt_image/: Dockerfile  network
openwrt_package/: Makefile
public/swagger-ui/: index.html
scripts/: download_namib_frontend.sh  import_mock_data.sh  recreate_db.sh
src/: app.rs  app_config.rs  auth.rs  config_firewall.rs  controller.rs  db.rs  error.rs  firewall_config.rs  lib.rs  mac_addr.rs  macaddr.rs  main.rs  models.rs  rpc.rs  rpc_server.rs  schema.rs  uci.rs  user.rs  util.rs
src/dhcp/: dhcp_event_listener.rs  dnsmasq_hook.rs  mod.rs
src/models/: actix_data_wrapper.rs  config_model.rs  device_model.rs  mod.rs  model_firewall.rs  mud_models.rs  room_model.rs  user_config_model.rs  user_model.rs
src/mud/: mod.rs  parser.rs
src/routes/: config_controller.rs  device_controller.rs  enforcer_controller.rs  mod.rs  mud_controller.rs  role_manager_controller.rs  room_controller.rs  status_controller.rs  users_controller.rs  (+1 more)
src/rpc/: mod.rs  (+5 more)
static/: index.html
tests/: config_tests.rs  lib.rs  mud_profile_service_tests.rs  role_service_tests.rs  test_dnsmasq_hook.rs  test_test.rs  user_api_test.rs  user_service_tests.rs
(+207 files in other folders)
