[package]
name = "namib_mud_controller"
version = "0.0.1"
authors = ["Jeffrey Munstermann <jemu@uni-bremen.de>", "Benjamin Ludewig <ludewigb@uni-bremen.de>", "Hugo Hakim Damer <hdamer@uni-bremen.de>", "Florian Bonetti <flobon@uni-bremen.de>", "Michael Bach <bachm@uni-bremen.de>"]
edition = "2018"

[features]
default = ["sqlite"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
actix-web = { version = "3.3", features = ["rustls"] }
actix-rt = "1.1"
actix-files = "0.5"
actix-cors = "0.5.4"
actix-ratelimit = { version = "0.3.1", default-features = false, features = ["memory"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "chrono"] }
namib_shared = { tag = "0.4.6", git = "https://gitlab.informatik.uni-bremen.de/namib/mud-controller-enforcer/namib_shared.git" }
log = "0.4.14"
env_logger = "0.8"
tokio = { version = "1.4", features = ["full"] }
async-dnssd = { branch = "fix_windows_build", git = "https://github.com/namib-project/rust-async-dnssd" }
futures = "0.3"
rustls = "0.19"
rustls_18 = { version = "0.18", package = "rustls" }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-manual-roots", "blocking"] }
tokio-rustls = "0.22"
tokio-util = "0.6"
tokio-serde = "0.8"
tokio-stream = { version = "0.1", features = ["net"] }
tarpc = { branch = "replace_u128_traceid", git = "https://github.com/namib-project/tarpc", features = ["full", "serde1-no-u128"] }
pin-project = "1.0"
rand = "0.8"
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.15"
jsonwebtoken = "7.2"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.12", features = ["derive"] }
snafu = { version = "0.6", default-features = false, features = ["std", "backtraces", "futures"] }
isahc = "1.0"
paperclip = { version = "0.5", features = ["actix", "chrono"] }
glob = "0.3"
const_format = "0.2"
strum = { version = "0.20", features = ["derive"] }
strum_macros = { version = "0.20" }
sha3 = "0.9"
base64 = "0.13"
regex = "1"
lazy_static = "1"
clokwerk = "0.3"
acme-lib = "0.8"
get_if_addrs = "0.5"
url = "2"
backoff = { version = "0.3", features = ["tokio"] }
neo4jthings-api = { path = "neo4jthings-api" }