[package]
name = "namib_mud_controller"
version = "0.0.1"
authors = ["Jeffrey Munstermann <jemu@uni-bremen.de>", "Benjamin Ludewig <ludewigb@uni-bremen.de>", "Hugo Hakim Damer <hdamer@uni-bremen.de>", "Florian Bonetti <flobon@uni-bremen.de>", "Michael Bach <bachm@uni-bremen.de>"]
edition = "2018"

[features]
default = ["sqlite"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
actix-web = { version = "^3.3.2", features = ["rustls"] }
actix-files = "^0.5.0"
actix-cors = "^0.5.4"
actix-ratelimit = { version = "^0.3.1", default-features = false, features = ["memory"] }
sqlx = { version = "^0.5.1", features = ["runtime-tokio-rustls", "chrono"] }
namib_shared = { tag = "0.4.6", git = "https://gitlab.informatik.uni-bremen.de/namib/mud-controller-enforcer/namib_shared.git" }
log = "^0.4.14"
env_logger = "^0.8.3"
tokio = { version = "^1.4.0", features = ["full"] }
async-dnssd = { branch = "fix_windows_build", git = "https://github.com/namib-project/rust-async-dnssd" }
futures = "^0.3.13"
rustls = "^0.19.0"
rustls_18 = { version = "^0.18.1", package = "rustls" }
reqwest = { version = "^0.11.2", default-features = false, features = ["rustls-tls-manual-roots", "blocking"] }
tokio-rustls = "^0.22.0"
tokio-util = "^0.6.5"
tokio-serde = "^0.8.0"
tokio-stream = { version = "^0.1.5", features = ["net"] }
tarpc = { branch = "replace_u128_traceid", git = "https://github.com/namib-project/tarpc", features = ["full"] }
pin-project = "^1.0.6"
rand = "^0.8.3"
rust-argon2 = "^0.8.3"
serde = { version = "^1.0.125", features = ["derive"] }
serde_json = "^1.0.64"
dotenv = "^0.15.0"
jsonwebtoken = "^7.2.0"
chrono = { version = "^0.4.19", features = ["serde"] }
validator = { version = "^0.13.0", features = ["derive"] }
snafu = { version = "^0.6.10", default-features = false, features = ["std", "backtraces", "futures"] }
isahc = "^1.3.0"
paperclip = { version = "^0.5.0", features = ["actix", "chrono"] }
glob = "^0.3.0"
const_format = "^0.2.14"
strum = { version = "^0.20.0", features = ["derive"] }
sha3 = "^0.9.1"
base64 = "^0.13.0"
regex = "^1.4.5"
lazy_static = "^1.4.0"
clokwerk = "^0.3.4"
acme-lib = "^0.8.1"
get_if_addrs = "^0.5.3"
url = "^2.2.1"
backoff = { version = "^0.3.0", features = ["tokio"] }
neo4things-api = { path = "neo4things-api" }