[package]
name = "namib_enforcer"
version = "0.1.0"
authors = ["Jeffrey Munstermann <jemu@uni-bremen.de>", "Benjamin Ludewig <ludewigb@uni-bremen.de>", "Hugo Hakim Damer <hdamer@uni-bremen.de>", "Florian Bonetti <flobon@uni-bremen.de>", "Michael Bach <bachm@uni-bremen.de>"]
edition = "2018"
default-run = "namib_enforcer"
resolver = "2"
license = "MIT OR Apache-2.0"

[features]
default = ["uci", "nftables"]
uci = ["rust-uci", "libc"]
nftables = ["nftnl", "mnl", "libc"]
dnsmasq_hook = []

[dependencies]
namib_shared = { path = "../namib_shared" }
tokio = { version = "1.5", features = ["macros", "rt", "net", "io-util", "sync", "fs"] }
log = "0.4"
env_logger = "0.9.0"
async-dnssd = "0.5.0"
futures = "0.3"
tokio-native-tls = "0.3"
tokio-util = "0.6"
serde = { version = "1.0", features = ["derive"] }
pin-project = "1.0"
tokio-serde = "0.8"
snafu = { version = "0.7.0", default-features = false, features = ["std", "backtraces-impl-backtrace-crate", "futures"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde_json = "1.0"
trust-dns-resolver = "0.21.1"
notify = "4"
regex = "1.4"
pnet_datalink = "0.29.0"
ipnetwork = "0.18.0"
nflog = { git = "https://github.com/chifflier/nflog-rs" }
pktparse = { branch = "feat-tcp-flags", git = "https://github.com/Ti-s-ch/pktparse-rs" }

[dev-dependencies]
serial_test = "0.6.0"

[target.'cfg(unix)'.dependencies]
rust-uci = { version = "0.1.5", optional = true }
libc = { version = "0.2.95", optional = true }
nftnl = { branch = "feature-icmp-musl-log-group", git = "https://github.com/namib-project/nftnl-rs.git", optional = true }
mnl = { branch = "fix-musl-targets", git = "https://github.com/namib-project/mnl-rs.git", optional = true}


[[bin]]
name = "namib_enforcer"

[[bin]]
name = "namib_dnsmasq_hook"
path = "src/dhcp/dnsmasq_hook.rs"
required-features = ["dnsmasq_hook"]
