[package]
name = "neo4jthings-api"
version = "1.0.0"
build = "build.rs"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "1.5"
[dependencies.reqwest]
version = "^0.10"
default-features = false
features = ["json"]

[dev-dependencies]
